@@ -163,6 +163,9 @@ def start_daemon( q_name, pid_filename, monitor, harvester, esharvester_cleanup,
     if harvester:
         properties.append( "-Dharvester=%s" % harvester )
 
+    if args:
+        cmd.append(args)
+
     cmd = [ 'java' ]
     for p in properties:
         cmd.append(p)
@@ -170,9 +173,6 @@ def start_daemon( q_name, pid_filename, monitor, harvester, esharvester_cleanup,
     cmd.append('-jar' )
     cmd.append( q_name )
 
-    if args:
-        cmd.append(args)
-   
     printcmd = ' '.join( cmd )
     
     log.debug( "Running process from cmd '%s'"%( printcmd ) )
