@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11164] "Datadock lukker ikke ned selvom man giver "bench" som option til app_starter.py"
    - bug [11175] "IObjectrepository.getObejctRelations( ObjectIdentifier objectIdentifier) metoden bruges ikke"
    - bug [11179] "IObjectRepository.getIdentifiersUnqualilfied"
    - bug [11180] "Bruges FedoraMain klassen?"
